flash fix for mobile users?

--- a/games page/games/achive.html
+++ b/games page/games/achive.html
@@ -8,6 +8,6 @@
     <title>achivement unlocked|geared-games</title>
 </head>
 <body>
-     <embed src="games sfw/achievement-unlocked.swf" width="1100" height="700"></embed>
+     <embed src="games sfw/achievement-unlocked.swf" width="device-width" height="device-height"></embed>
 </body>
 </html>
