--- a/games page/games/btd1.html
+++ b/games page/games/btd1.html
@@ -8,6 +8,6 @@
     <title>btd1|geared-games</title>
 </head>
 <body>
-     <embed src="games sfw/bloonstd_moved.swf" width="1100" height="700"></embed>
+     <embed src="games sfw/bloonstd_moved.swf" width="device-width" height="device-height"></embed>
 </body>
 </html>
