--- a/games page/games/btd3.html
+++ b/games page/games/btd3.html
@@ -8,6 +8,6 @@
     <title>btd3|geared-games</title>
 </head>
 <body>
-     <embed src="games sfw/Bloons_Tower_Defense_3.swf" width="1100" height="700"></embed>
+     <embed src="games sfw/Bloons_Tower_Defense_3.swf" width="device-width" height="device-height"></embed>
 </body>
 </html>
