--- a/games page/games/portal.html
+++ b/games page/games/portal.html
@@ -8,6 +8,6 @@
     <title>portal|geared-games</title>
 </head>
 <body>
-     <embed src="games sfw/Portal_wcs2.swf" width="1100" height="700"></embed>
+     <embed src="games sfw/Portal_wcs2.swf" width="device-width" height="device-height"></embed>
 </body>
 </html>
