--- a/games page/games/stick_rpg.html
+++ b/games page/games/stick_rpg.html
@@ -8,6 +8,6 @@
     <title>stick rpg|geared-games</title>
 </head>
 <body>
-     <embed src="games sfw/Stick-RPG-Complete.swf" width="1100" height="700"></embed>
+     <embed src="games sfw/Stick-RPG-Complete.swf" width="device-width" height="device-height"></embed>
 </body>
 </html>
