--- a/games page/games/sbemails9.html
+++ b/games page/games/sbemails9.html
@@ -8,6 +8,6 @@
     <title>sbemail9|geared-games</title>
 </head>
 <body>
-     <embed src="sbemails sfw/sbemail9.swf" width="1100" height="700"></embed>
+     <embed src="sbemails sfw/sbemail9.swf" width="device-width" height="device-height"></embed>
 </body>
 </html>
