--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
    <br>
    <h2>changelog</h2>
    <br>
-   <p>First version changelog soon!</p>
+   <p>added portal</p>
+   <p>added achivement unlocked</p>
+   <p>add btd1 - btd3</p>
+   <p>added strong bad emails 1 - 10</p>
+   <p>added strong bad email 58(trogdor)</p>
+   <p>added mobile support</p>
    <a href="games page/games.html"><h6>games</h6></a>
 </body>
 </html>
