--- a/games page/games.html
+++ b/games page/games.html
@@ -30,6 +30,16 @@
    <a href="games/sbemails8.html"><p class="games">strong bad email #8</p></a>
    <a href="games/sbemails9.html"><p class="games">strong bad email #9</p></a>
    <a href="games/sbemails10.html"><p class="games">strong bad email #10</p></a>
+   <a href="games/sbemails11.html"><p class="games">strong bad email #11</p></a>
+   <a href="games/sbemails12.html"><p class="games">strong bad email #12</p></a>
+   <a href="games/sbemails13.html"><p class="games">strong bad email #13</p></a>
+   <a href="games/sbemails14.html"><p class="games">strong bad email #14</p></a>
+   <a href="games/sbemails15.html"><p class="games">strong bad email #15</p></a>
+   <a href="games/sbemails16.html"><p class="games">strong bad email #16</p></a>
+   <a href="games/sbemails17.html"><p class="games">strong bad email #17</p></a>
+   <a href="games/sbemails18.html"><p class="games">strong bad email #18</p></a>
+   <a href="games/sbemails19.html"><p class="games">strong bad email #19</p></a>
+   <a href="games/sbemails20.html"><p class="games">strong bad email #20</p></a>
    <a href="games/sbemails58.html"><p class="games">strong bad email #58 (trogdor)</p></a>
    <p class="fancy">//video links//</p>
 </body>
