im done for today

--- a/games page/games.html
+++ b/games page/games.html
@@ -16,6 +16,9 @@
    <a href="games/btd2.html"><p class="games">bloons tower defense 2</p></a>
    <a href="games/btd3.html"><p class="games">bloons tower defense 3</p></a>
    <a href="games/stick_rpg.html"><p class="games">stick rpg</p></a>
+   <a href="games/mis.html"><p class="games">missing in space</p></a>
+   <a href="games/rythm-blaster.html"><p class="games">rythm blaster</p></a>
+   <a href="games/rythm-rocket.html"><p class="games">rythm rockets</p></a>
    <p class="fancy">//game links//</p>
    <br>
    <h1>strong bad email collection</h1>
