--- a/test.html
+++ b/test.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <embed src="games page/games/emulatorjs/supermarioworld/supermarioworld.html" height="1000" width="1230"></embed>
+    <embed src="emulatorjs/snes/supermarioworld.html" height="1000" width="1230"></embed>
 </body>
 </html>
