--- a/games page/games.html
+++ b/games page/games.html
@@ -19,6 +19,8 @@
    <a href="games/mis.html"><p class="games">missing in space</p></a>
    <a href="games/rythm-blaster.html"><p class="games">rythm blaster</p></a>
    <a href="games/rythm-rocket.html"><p class="games">rythm rockets</p></a>
+   <a href="games/breakingbad.html"><p class="games">breaking bad for nds</p></a>
+   <a href="games/smw.html"><p class="games">super mario world snes</p></a>
    <p class="fancy">//game links//</p>
    <br>
    <h1>strong bad email collection</h1>
