--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
 <body>
    <h1>geared-games</h1>
    <br>
-   <h2>changelog</h2>
+   <h2>changelog v1.1</h2>
    <br>
-   <p>added portal</p>
-   <p>added achivement unlocked</p>
-   <p>add btd1 - btd3</p>
-   <p>added strong bad emails 1 - 10</p>
-   <p>added strong bad email 58(trogdor)</p>
-   <p>added mobile support</p>
+   <p>added emulatorjs</p>
+   <p>added super mario world</p>
+   <p>breaking bad ds</p>
+   <p>added pokemon platnium</p>
+   <p>added strong bad emails 1 - 20</p>
+   <p></p>
+   <p></p>
    <a href="games page/games.html"><h6>games</h6></a>
 </body>
 </html>
