--- a/games page/games/breakingbad.html
+++ b/games page/games/breakingbad.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <embed src="emulatorjs/nds/breakingbad.html">
+    <embed src="emulatorjs/nds/breakingbad.html" width="750" height="500">
 </body>
 </html>
