--- a/games page/games/pkmn_plat.html
+++ b/games page/games/pkmn_plat.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>super mario world</title>
+    <title>Document</title>
 </head>
 <body>
-    <embed src="emulatorjs/snes/supermarioworld.html" width="750" height="500">
+    <embed src="emulatorjs/nds/pkmn_plat.html" width="750" height="500">
 </body>
 </html>
