--- a/games page/games.html
+++ b/games page/games.html
@@ -20,7 +20,14 @@
    <a href="games/rythm-blaster.html"><p class="games">rythm blaster</p></a>
    <a href="games/rythm-rocket.html"><p class="games">rythm rockets</p></a>
    <a href="games/breakingbad.html"><p class="games">breaking bad for nds</p></a>
-   <a href="games/smw.html"><p class="games">super mario world snes</p></a>
+   <a href="games/smw.html"><p class="games">super mario world for snes</p></a>
+   <a href="games/bcsds.html"><p class="games">better call saul for nds</p></a>
+   <a href="games/pkmn_fire.html"><p class="games">pokemon fire red for gba</p></a>
+   <a href="games/pkmn_leaf.html"><p class="games">pokemon leaf green for gba</p></a>
+   <a href="games/pkmn_ruby.html"><p class="games">pokemon ruby for gba</p></a>
+   <a href="games/pkmn_sapphire.html"><p class="games">pokemon sapphire for gba</p></a>
+   <a href="games/pkmn_emerald.html"><p class="games">pokemon emerald for gba</p></a>
+   <a href="games/bcsds.html"><p class="games">better call saul for nds</p></a>
    <p class="fancy">//game links//</p>
    <br>
    <h1>strong bad email collection</h1>
