--- a/games page/games/emulatorjs/nds/bcsds.html
+++ b/games page/games/emulatorjs/nds/bcsds.html
@@ -15,11 +15,10 @@
         <script>
             EJS_player = "#game";
             EJS_core = "nds";
-            EJS_gameName = "pkmn_plat";
-            EJS_color = "#0064ff";
-            EJS_startOnLoaded = true;
+            EJS_gameName = "better call saul";
+            EJS_color = "#6e7e96";
             EJS_pathtodata = "https://cdn.emulatorjs.org/stable/data/";
-            EJS_gameUrl = "3541 - Pokemon Platinum Version (US)(XenoPhobia).nds";
+            EJS_gameUrl = "bcsds.nds";
         </script>
         <script src="https://cdn.emulatorjs.org/stable/data/loader.js"></script>
     </body>
