--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <body>
    <h1>geared-games</h1>
    <br>
-   <h2>changelog v1.1</h2>
+   <h2>changelog v1.2</h2>
    <br>
-   <p>added emulatorjs</p>
-   <p>added super mario world</p>
-   <p>breaking bad ds</p>
-   <p>added pokemon platnium</p>
-   <p>added strong bad emails 1 - 20</p>
+   <p>added 5 gba pokemon games</p>
+   <p>added better call saul ds XD</p>
+   <p></p>
+   <p></p>
+   <p></p>
    <p></p>
    <p></p>
    <a href="games page/games.html"><h6>games</h6></a>
