--- a/games page/games.html
+++ b/games page/games.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="icon" href="icon.png">
+    <link rel="icon" href="icon.jpg">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Games|Hypegames</title>
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Games</h1>
-    <p class="fancy">//game links//</p>
+    <p class="link">//game links//</p>
    <a href="games/achive.html"><p class="games">achievement unlocked</p></a>
    <a href="games/portal.html"><p class="games">portal</p></a>
    <a href="games/btd1.html"><p class="games">bloons tower defense 1</p></a>
@@ -28,10 +28,10 @@
    <a href="games/pkmn_sapphire.html"><p class="games">pokemon sapphire for gba</p></a>
    <a href="games/pkmn_emerald.html"><p class="games">pokemon emerald for gba</p></a>
    <a href="games/bcsds.html"><p class="games">better call saul for nds</p></a>
-   <p class="fancy">//game links//</p>
+   <p class="link">//game links//</p>
    <br>
    <h1>strong bad email collection</h1>
-   <p class="fancy">//video links//</p>
+   <p class="link">//video links//</p>
    <a href="games/sbemails1.html"><p class="games">strong bad email #1</p></a>
    <a href="games/sbemails2.html"><p class="games">strong bad email #2</p></a>
    <a href="games/sbemails3.html"><p class="games">strong bad email #3</p></a>
@@ -53,6 +53,6 @@
    <a href="games/sbemails19.html"><p class="games">strong bad email #19</p></a>
    <a href="games/sbemails20.html"><p class="games">strong bad email #20</p></a>
    <a href="games/sbemails58.html"><p class="games">strong bad email #58 (trogdor)</p></a>
-   <p class="fancy">//video links//</p>
+   <p class="link">//video links//</p>
 </body>
 </html>
