--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
    <p></p>
    <a href="games page/games.html"><h6>games</h6></a>
    <a href="work arounds/work.html"><h6>website backups</h6></body></a>
+   <a href="licence.html">license</a>
 </body>
 </html>
