fix number something

--- a/games page/games.html
+++ b/games page/games.html
@@ -28,6 +28,7 @@
    <a href="games/pkmn_sapphire.html"><p class="games">pokemon sapphire for gba</p></a>
    <a href="games/pkmn_emerald.html"><p class="games">pokemon emerald for gba</p></a>
    <a href="games/bcsds.html"><p class="games">better call saul for nds</p></a>
+   <a href="games/brain_math.html"><p class="games">brain age math for nds note: this is a test</p></a>
    <p class="link">//game links//</p>
    <br>
    <h1>strong bad email collection</h1>
