--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="icon" href="icon.png">
-    <link rel="stylesheet" href="home.css" >
+    <link rel="icon" href="home page/icon.jpg">
+    <link rel="stylesheet" href="home page/home.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>geared-games</title>
@@ -12,8 +12,8 @@
    <br>
    <h2>v1.2</h2>
    <br>
-   <p>added 5 gba pokemon games</p>
-   <p>added better call saul ds XD</p>
+   <p>started testing dsiware</p>
+   <p></p>
    <p></p>
    <p></p>
    <p></p>
