--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
    <h1>geared-games</h1>
    <br>
-   <h2>v1.2</h2>
+   <h2>v1.3</h2>
    <br>
    <p>started testing dsiware</p>
-   <p></p>
+   <p>added game reuests!</p>
    <p></p>
    <p></p>
    <p></p>
@@ -21,6 +21,7 @@
    <p></p>
    <a href="games page/games.html"><h6>games</h6></a>
    <a href="work arounds/work.html"><h6>website backups</h6></body></a>
-   <a href="other/licence.html">license</a>
+   <a href="other/licence.html"><h6>license</h6></a>
+   <a href="game request page/request_main.html"><h6>request a game!</h6></a>
 </body>
 </html>
