--- a/index.html
+++ b/index.html
@@ -10,17 +10,18 @@
 <body>
    <h1>geared-games</h1>
    <br>
+   <h2>requests completed: 1</h2>
    <h2>v1.3</h2>
    <br>
    <p>started testing dsiware</p>
    <p>added game reuests!</p>
-   <p></p>
-   <p></p>
+   <p>completed first request!</p>
+   <p>started testing roblox support</p>
    <p></p>
    <p></p>
    <p></p>
    <a href="games page/games.html"><h6>games</h6></a>
-   <a href="work arounds/work.html"><h6>website backups</h6></body></a>
+   <a href="backups/backups.html"><h6>website backups</h6></body></a>
    <a href="other/licence.html"><h6>license</h6></a>
    <a href="game request page/request_main.html"><h6>request a game!</h6></a>
 </body>
