--- a/game request page/request_credits.html
+++ b/game request page/request_credits.html
@@ -10,5 +10,6 @@
     <h1>credits to game requesters</h1>
     <br>
     <P>bobert: one chance</P>
+    <p>low taper fade: "ninja" (3foot ninja)</p>
 </body>
 </html>
