--- a/games page/games/emulatorjs/dsi/brain_math.html
+++ b/games page/games/emulatorjs/dsi/brain_math.html
@@ -18,7 +18,7 @@
             EJS_gameName = "brain_math";
             EJS_color = "#0064ff";
             EJS_pathtodata = "https://cdn.emulatorjs.org/stable/data/";
-            EJS_gameUrl = "NOUMATHUS_KNRE01_02.nds";
+            EJS_gameUrl = "brain_math.nds";
         </script>
         <script src="https://cdn.emulatorjs.org/stable/data/loader.js"></script>
     </body>
