--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <body>
    <h1>geared-games</h1>
    <br>
-   <h2>requests completed: 1</h2>
+   <h2>requests completed: 2</h2>
    <h2>v1.3</h2>
    <br>
    <p>started testing dsiware</p>
    <p>added game reuests!</p>
    <p>completed first request!</p>
-   <p>started testing roblox support</p>
-   <p></p>
+   <p>roblox testing ended</p>
+   <p>more tests coming soon</p>
    <p></p>
    <p></p>
    <a href="games page/games.html"><h6>games</h6></a>
