--- a/game request page/request_main.html
+++ b/game request page/request_main.html
@@ -19,5 +19,6 @@
         <p>simple html/css/js</p>
         <br>
         <a href="request_form.html"><h6>request form</h6></a>
+        <a href="request_credits.html"><h6>game request credits</h6></a>
 </body>
 </html>
