dsi test update

--- a/games page/games/emulatorjs/dsi/brain_math.html
+++ b/games page/games/emulatorjs/dsi/brain_math.html
@@ -19,6 +19,11 @@
             EJS_color = "#0064ff";
             EJS_pathtodata = "https://cdn.emulatorjs.org/stable/data/";
             EJS_gameUrl = "brain_math.nds";
+            EJS_biosUrl = "nand/bios7.bin";
+            EJS_biosUrl = "nand/bios9.bin";
+            EJS_biosUrl = "nand/bios9i.bin";
+            EJS_biosUrl = 'nand/bios7i.bin';
+            EJS_biosUrl = "nand/dsfirmware.bin";
         </script>
         <script src="https://cdn.emulatorjs.org/stable/data/loader.js"></script>
     </body>
