--- a/game request page/request_credits.html
+++ b/game request page/request_credits.html
@@ -2,14 +2,21 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="request.css">
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Credits | Geared Games</title>
 </head>
 <body>
-    <h1>credits to game requesters</h1>
-    <br>
-    <P>bobert: one chance</P>
-    <p>low taper fade: "ninja" (3foot ninja)</p>
+    <header>
+        <h1>Credits to Game Requesters</h1>
+    </header>
+
+    <main>
+        <section class="credits">
+            <p><strong>Bobert:</strong> One Chance</p>
+            <p><strong>Low Taper Fade:</strong> "Ninja" (3 Foot Ninja)</p>
+        </section>
+    </main>
 </body>
 </html>
