--- a/games page/games.html
+++ b/games page/games.html
@@ -4,58 +4,70 @@
     <link rel="icon" href="icon.jpg">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Games|Hypegames</title>
-    <link rel="stylesheet" href="game.css">  
+    <title>Games | Geared Games</title>
+    <link rel="stylesheet" href="games.css">
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Games</h1>
-    <p class="link">//game links//</p>
-   <a href="games/achive.html"><p class="games">achievement unlocked</p></a>
-   <a href="games/portal.html"><p class="games">portal</p></a>
-   <a href="games/btd1.html"><p class="games">bloons tower defense 1</p></a>
-   <a href="games/btd2.html"><p class="games">bloons tower defense 2</p></a>
-   <a href="games/btd3.html"><p class="games">bloons tower defense 3</p></a>
-   <a href="games/stick_rpg.html"><p class="games">stick rpg</p></a>
-   <a href="games/mis.html"><p class="games">missing in space</p></a>
-   <a href="games/rythm-blaster.html"><p class="games">rythm blaster</p></a>
-   <a href="games/rythm-rocket.html"><p class="games">rythm rockets</p></a>
-   <a href="games/breakingbad.html"><p class="games">breaking bad for nds</p></a>
-   <a href="games/smw.html"><p class="games">super mario world for snes</p></a>
-   <a href="games/bcsds.html"><p class="games">better call saul for nds</p></a>
-   <a href="games/pkmn_fire.html"><p class="games">pokemon fire red for gba</p></a>
-   <a href="games/pkmn_leaf.html"><p class="games">pokemon leaf green for gba</p></a>
-   <a href="games/pkmn_ruby.html"><p class="games">pokemon ruby for gba</p></a>
-   <a href="games/pkmn_sapphire.html"><p class="games">pokemon sapphire for gba</p></a>
-   <a href="games/pkmn_emerald.html"><p class="games">pokemon emerald for gba</p></a>
-   <a href="games/bcsds.html"><p class="games">better call saul for nds</p></a>
-   <a href="games/brain_math.html"><p class="games">brain age math for dsi (dsiware test)</p></a>
-   <a href="games/one_chance.html"><p class="games">one chance</p></a>
-   
-   <p class="link">//game links//</p>
-   <br>
-   <h1>strong bad email collection</h1>
-   <p class="link">//video links//</p>
-   <a href="games/sbemails1.html"><p class="games">strong bad email #1</p></a>
-   <a href="games/sbemails2.html"><p class="games">strong bad email #2</p></a>
-   <a href="games/sbemails3.html"><p class="games">strong bad email #3</p></a>
-   <a href="games/sbemails4.html"><p class="games">strong bad email #4</p></a>
-   <a href="games/sbemails5.html"><p class="games">strong bad email #5</p></a>
-   <a href="games/sbemails6.html"><p class="games">strong bad email #6</p></a>
-   <a href="games/sbemails7.html"><p class="games">strong bad email #7</p></a>
-   <a href="games/sbemails8.html"><p class="games">strong bad email #8</p></a>
-   <a href="games/sbemails9.html"><p class="games">strong bad email #9</p></a>
-   <a href="games/sbemails10.html"><p class="games">strong bad email #10</p></a>
-   <a href="games/sbemails11.html"><p class="games">strong bad email #11</p></a>
-   <a href="games/sbemails12.html"><p class="games">strong bad email #12</p></a>
-   <a href="games/sbemails13.html"><p class="games">strong bad email #13</p></a>
-   <a href="games/sbemails14.html"><p class="games">strong bad email #14</p></a>
-   <a href="games/sbemails15.html"><p class="games">strong bad email #15</p></a>
-   <a href="games/sbemails16.html"><p class="games">strong bad email #16</p></a>
-   <a href="games/sbemails17.html"><p class="games">strong bad email #17</p></a>
-   <a href="games/sbemails18.html"><p class="games">strong bad email #18</p></a>
-   <a href="games/sbemails19.html"><p class="games">strong bad email #19</p></a>
-   <a href="games/sbemails20.html"><p class="games">strong bad email #20</p></a>
-   <a href="games/sbemails58.html"><p class="games">strong bad email #58 (trogdor)</p></a>
-   <p class="link">//video links//</p>
+    <header>
+        <h1>Games</h1>
+    </header>
+
+    <main>
+        <section class="games-links">
+            <p class="link">// Game Links //</p>
+            <ul>
+                <li><a href="games/achive.html">Achievement Unlocked</a></li>
+                <li><a href="games/portal.html">Portal</a></li>
+                <li><a href="games/btd1.html">Bloons Tower Defense 1</a></li>
+                <li><a href="games/btd2.html">Bloons Tower Defense 2</a></li>
+                <li><a href="games/btd3.html">Bloons Tower Defense 3</a></li>
+                <li><a href="games/stick_rpg.html">Stick RPG</a></li>
+                <li><a href="games/mis.html">Missing in Space</a></li>
+                <li><a href="games/rythm-blaster.html">Rhythm Blaster</a></li>
+                <li><a href="games/rythm-rocket.html">Rhythm Rockets</a></li>
+                <li><a href="games/breakingbad.html">Breaking Bad for NDS</a></li>
+                <li><a href="games/smw.html">Super Mario World for SNES</a></li>
+                <li><a href="games/bcsds.html">Better Call Saul for NDS</a></li>
+                <li><a href="games/pkmn_fire.html">Pokemon Fire Red for GBA</a></li>
+                <li><a href="games/pkmn_leaf.html">Pokemon Leaf Green for GBA</a></li>
+                <li><a href="games/pkmn_ruby.html">Pokemon Ruby for GBA</a></li>
+                <li><a href="games/pkmn_sapphire.html">Pokemon Sapphire for GBA</a></li>
+                <li><a href="games/pkmn_emerald.html">Pokemon Emerald for GBA</a></li>
+                <li><a href="games/brain_math.html">Brain Age Math for DSi (DSiWare Test)</a></li>
+                <li><a href="games/one_chance.html">One Chance</a></li>
+            </ul>
+            <p class="link">// Game Links //</p>
+        </section>
+
+        <section class="videos-links">
+            <h2>Strong Bad Email Collection</h2>
+            <p class="link">// Video Links //</p>
+            <ul>
+                <li><a href="games/sbemails1.html">Strong Bad Email #1</a></li>
+                <li><a href="games/sbemails2.html">Strong Bad Email #2</a></li>
+                <li><a href="games/sbemails3.html">Strong Bad Email #3</a></li>
+                <li><a href="games/sbemails4.html">Strong Bad Email #4</a></li>
+                <li><a href="games/sbemails5.html">Strong Bad Email #5</a></li>
+                <li><a href="games/sbemails6.html">Strong Bad Email #6</a></li>
+                <li><a href="games/sbemails7.html">Strong Bad Email #7</a></li>
+                <li><a href="games/sbemails8.html">Strong Bad Email #8</a></li>
+                <li><a href="games/sbemails9.html">Strong Bad Email #9</a></li>
+                <li><a href="games/sbemails10.html">Strong Bad Email #10</a></li>
+                <li><a href="games/sbemails11.html">Strong Bad Email #11</a></li>
+                <li><a href="games/sbemails12.html">Strong Bad Email #12</a></li>
+                <li><a href="games/sbemails13.html">Strong Bad Email #13</a></li>
+                <li><a href="games/sbemails14.html">Strong Bad Email #14</a></li>
+                <li><a href="games/sbemails15.html">Strong Bad Email #15</a></li>
+                <li><a href="games/sbemails16.html">Strong Bad Email #16</a></li>
+                <li><a href="games/sbemails17.html">Strong Bad Email #17</a></li>
+                <li><a href="games/sbemails18.html">Strong Bad Email #18</a></li>
+                <li><a href="games/sbemails19.html">Strong Bad Email #19</a></li>
+                <li><a href="games/sbemails20.html">Strong Bad Email #20</a></li>
+                <li><a href="games/sbemails58.html">Strong Bad Email #58 (Trogdor)</a></li>
+            </ul>
+            <p class="link">// Video Links //</p>
+        </section>
+    </main>
 </body>
 </html>
