--- a/index.html
+++ b/index.html
@@ -1,28 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="icon" href="home page/icon.jpg">
     <link rel="stylesheet" href="home page/home.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>geared-games</title>
+    <title>Geared Games</title>
 </head>
 <body>
-   <h1>geared-games</h1>
-   <br>
-   <h2>requests completed: 2</h2>
-   <h2>v1.3</h2>
-   <br>
-   <p>started testing dsiware</p>
-   <p>added game reuests!</p>
-   <p>completed first request!</p>
-   <p>roblox testing ended</p>
-   <p>more tests coming soon</p>
-   <p></p>
-   <p></p>
-   <a href="games page/games.html"><h6>games</h6></a>
-   <a href="backups/backups.html"><h6>website backups</h6></body></a>
-   <a href="other/licence.html"><h6>license</h6></a>
-   <a href="game request page/request_main.html"><h6>request a game!</h6></a>
+    <header>
+        <h1>Geared Games</h1>
+    </header>
+
+    <main>
+        <section class="updates">
+            <h2>Requests Completed: 2</h2>
+            <h2>Version 1.3</h2>
+            <ul>
+                <li>Started testing DSiWare</li>
+                <li>Added game requests!</li>
+                <li>Completed first request!</li>
+                <li>Roblox testing ended</li>
+                <li>More tests coming soon</li>
+            </ul>
+        </section>
+
+        <nav class="links">
+            <a href="games page/games.html">Games</a>
+            <a href="backups/backups.html">Website Backups</a>
+            <a href="other/licence.html">License</a>
+            <a href="game request page/request_main.html">Request a Game!</a>
+        </nav>
+    </main>
 </body>
 </html>
