--- a/game request page/request_main.html
+++ b/game request page/request_main.html
@@ -2,23 +2,33 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="request.css">
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Game Requests | Geared Games</title>
 </head>
 <body>
-    <h1>game requests</h1>
-    <br>
-    <h2>compatible game types</h2>
-    
-        <p>gba</p>
-        <p>snes</p>
-        <p>gbc</p>
-        <p>gb</p>
-        <p>flash</p>
-        <p>simple html/css/js</p>
-        <br>
-        <a href="request_form.html"><h6>request form</h6></a>
-        <a href="request_credits.html"><h6>game request credits</h6></a>
+    <header>
+        <h1>Game Requests</h1>
+    </header>
+
+    <main>
+        <section class="compatible-games">
+            <h2>Compatible Game Types</h2>
+            <ul>
+                <li>GBA</li>
+                <li>SNES</li>
+                <li>GBC</li>
+                <li>GB</li>
+                <li>Flash</li>
+                <li>Simple HTML/CSS/JS</li>
+            </ul>
+        </section>
+
+        <section class="request-links">
+            <a href="request_form.html"><h6>Request Form</h6></a>
+            <a href="request_credits.html"><h6>Game Request Credits</h6></a>
+        </section>
+    </main>
 </body>
 </html>
