--- a/index.html
+++ b/index.html
@@ -16,20 +16,17 @@
     <main>
         <section class="updates">
             <h2>Requests Completed: 2</h2>
-            <h2>Version 1.3</h2>
+            <h2>Version 1.4</h2>
             <ul>
-                <li>Started testing DSiWare</li>
-                <li>Added game requests!</li>
-                <li>Completed first request!</li>
-                <li>Roblox testing ended</li>
-                <li>More tests coming soon</li>
+                <li>ended testing DSiWare</li>
+                <li>started testing proxy...</li>
+                <li>added STYLE!!!</li>
             </ul>
         </section>
 
         <nav class="links">
             <a href="games page/games.html">Games</a>
             <a href="backups/backups.html">Website Backups</a>
-            <a href="other/licence.html">License</a>
             <a href="game request page/request_main.html">Request a Game!</a>
         </nav>
     </main>
