--- a/games page/games.html
+++ b/games page/games.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!--google translate api-->
+    <script src="script.js"></script> 
+      <script type="text/javascript">
+        function googleTranslateElementInit() {
+            new google.translate.TranslateElement(
+                {pageLanguage: 'en'},
+                'google_translate_element'
+            );
+        } 
+  </script>
+  <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+    <!--google translate api-->
     <link rel="icon" href="icon.jpg">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,6 +26,7 @@
     </header>
 
     <main>
+        <div id="google_translate_element"></div>
         <section class="games-links">
             <p class="link">// Game Links //</p>
             <ul>
