--- a/backups/backups.html
+++ b/backups/backups.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!--google translate api-->
+    <script src="script.js"></script> 
+      <script type="text/javascript">
+        function googleTranslateElementInit() {
+            new google.translate.TranslateElement(
+                {pageLanguage: 'en'},
+                'google_translate_element'
+            );
+        } 
+  </script>
+  <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+    <!--google translate api-->
     <link rel="stylesheet" href="backups.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +20,7 @@
 </head>
 <body>
     <h2>website backups and deployers</h2>
+    <div id="google_translate_element"></div>
     <a href="https://burned-arsenic.vercel.app"><h6>arsenic backup (no proxy)</h6></a>
 </body>
 </html>
