--- a/game request page/request_credits.html
+++ b/game request page/request_credits.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!--google translate api-->
+    <script src="script.js"></script> 
+      <script type="text/javascript">
+        function googleTranslateElementInit() {
+            new google.translate.TranslateElement(
+                {pageLanguage: 'en'},
+                'google_translate_element'
+            );
+        } 
+  </script>
+  <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+    <!--google translate api-->
     <link rel="stylesheet" href="request.css">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
@@ -13,6 +25,7 @@
     </header>
 
     <main>
+        <div id="google_translate_element"></div>
         <section class="credits">
             <p><strong>Bobert:</strong> One Chance</p>
             <p><strong>Low Taper Fade:</strong> "Ninja" (3 Foot Ninja)</p>
