--- a/index.html
+++ b/index.html
@@ -1,15 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<!--google translate api-->
+    <script src="script.js"></script> 
+      <script type="text/javascript">
+        function googleTranslateElementInit() {
+            new google.translate.TranslateElement(
+                {pageLanguage: 'en'},
+                'google_translate_element'
+            );
+        } 
+  </script>
+  <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+    <!--google translate api-->
+    <!--font-->
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <!--font-->
+    <!--basics-->
     <link rel="icon" href="home page/icon.jpg">
     <link rel="stylesheet" href="home page/home.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Geared Games</title>
+     <!--basics-->
 </head>
 <body>
-    <header>
+    <header> 
         <h1>Geared Games</h1>
     </header>
 
@@ -28,6 +44,7 @@
             <a href="games page/games.html">Games</a>
             <a href="backups/backups.html">Website Backups</a>
             <a href="game request page/request_main.html">Request a Game!</a>
+            <div id="google_translate_element"></div>
         </nav>
     </main>
 </body>
