--- a/game request page/request_credits.html
+++ b/game request page/request_credits.html
@@ -28,6 +28,8 @@
         <section class="credits">
             <p><strong>Bobert:</strong> One Chance</p>
             <p><strong>Low Taper Fade:</strong> "Ninja" (3 Foot Ninja)</p>
+            <p><strong>dani:</strong>pokemon crysatal</p>
+            <p><strong>dani:</strong>super mario rpg</p>
         </section>
     </main>
 </body>
