--- a/games page/games.html
+++ b/games page/games.html
@@ -48,6 +48,8 @@
                 <li><a href="games/pkmn_emerald.html">Pokemon Emerald for GBA</a></li>
                 <li><a href="games/brain_math.html">Brain Age Math for DSi (DSiWare Test)</a></li>
                 <li><a href="games/one_chance.html">One Chance</a></li>
+                <li><a href="games/pkmn_crystal.html">pokemon crystal for gbc</a></li>
+                <li><a href="games/mario_rpg_seven.html">super mario rpg for snes</a></li>
             </ul>
             <p class="link">// Game Links //</p>
         </section>
