title fix + 2 new games

--- a/games page/games.html
+++ b/games page/games.html
@@ -50,6 +50,8 @@
                 <li><a href="games/one_chance.html">One Chance</a></li>
                 <li><a href="games/pkmn_crystal.html">pokemon crystal for gbc</a></li>
                 <li><a href="games/mario_rpg_seven.html">super mario rpg for snes</a></li>
+                <li><a href="games/impossible.html">impossible quiz</a></li>
+                <li><a href="games/smash_flash.html">super smash flash</a></li>
             </ul>
             <p class="link">// Game Links //</p>
         </section>
