--- a/games page/games/brain_math.html
+++ b/games page/games/brain_math.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>brain age math|geared games</title>
 </head>
 <body>
     <embed src="emulatorjs/dsi/brain_math.html" width="750" height="500">
