--- a/games page/games/mis.html
+++ b/games page/games/mis.html
@@ -5,7 +5,7 @@
     <script src="ruffle.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>missing in space|geared-games</title>
+    <title>missing in space|geared games</title>
 </head>
 <body>
      <embed src="games sfw/mission-in-space.swf" width="device-width" height="device-height"></embed>
