--- a/games page/games/achive.html
+++ b/games page/games/achive.html
@@ -5,7 +5,7 @@
     <script src="ruffle.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>achivement unlocked|geared-games</title>
+    <title>achivement unlocked|geared games</title>
 </head>
 <body>
      <embed src="games sfw/achievement-unlocked.swf" width="device-width" height="device-height"></embed>
