--- a/games page/games/one_chance.html
+++ b/games page/games/one_chance.html
@@ -5,7 +5,7 @@
     <script src="ruffle.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>btd3|geared-games</title>
+    <title>one chance|geared games</title>
 </head>
 <body>
      <embed src="games sfw/One Chance.swf" width="device-width" height="device-height"></embed>
