--- a/games page/games/pkmn_ruby.html
+++ b/games page/games/pkmn_ruby.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>pokemon ruby|geared games</title>
 </head>
 <body>
     <embed src="emulatorjs/gba/pkmn_ruby.html" width="750" height="500">
