--- a/games page/games/sbemails8.html
+++ b/games page/games/sbemails8.html
@@ -5,7 +5,7 @@
     <script src="ruffle.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>sbemail8|geared-games</title>
+    <title>sbemail8|geared games</title>
 </head>
 <body>
      <embed src="sbemails sfw/sbemail8.swf" width="device-width" height="device-height"></embed>
