--- a/games page/games/smw.html
+++ b/games page/games/smw.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>super mario world</title>
+    <title>super mario world|geared games</title>
 </head>
 <body>
     <embed src="emulatorjs/snes/supermarioworld.html" width="750" height="500">
