--- a/index.html
+++ b/index.html
@@ -1,51 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!--google translate api-->
-    <script src="script.js"></script> 
-      <script type="text/javascript">
-        function googleTranslateElementInit() {
-            new google.translate.TranslateElement(
-                {pageLanguage: 'en'},
-                'google_translate_element'
-            );
-        } 
-  </script>
-  <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-    <!--google translate api-->
-    <!--font-->
-    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-    <!--font-->
-    <!--basics-->
     <link rel="icon" href="home page/icon.jpg">
     <link rel="stylesheet" href="home page/home.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Geared Games</title>
-     <!--basics-->
+    <title>🎄 Geared Games 🎄</title>
 </head>
 <body>
-    <header> 
-        <h1>Geared Games</h1>
-    </header>
-
-    <main>
-        <section class="updates">
-            <h2>Requests Completed: 4</h2>
-            <h2>Version 1.4</h2>
-            <ul>
-                <li>ended testing DSiWare</li>
-                <li>started testing proxy...</li>
-                <li>added STYLE!!!</li>
-            </ul>
-        </section>
-
-        <nav class="links">
-            <a href="games page/games.html">Games</a>
-            <a href="backups/backups.html">Website Backups</a>
-            <a href="game request page/request_main.html">Request a Game!</a>
-            <div id="google_translate_element"></div>
-        </nav>
-    </main>
+    <div class="content">
+        <h1>Welcome to Geared Games! 🎅</h1>
+        <h2>Requests Completed: 4</h2>
+        <h2>Version 1.4</h2>
+        <p>🎮 ended testing DSiWare!</p>
+        <p>🎁 started new styling</p>
+        <p>❄️ new bigger project soon </p>
+        <div class="links">
+            <a href="games page/games.html"><h6>Games</h6></a>
+            <a href="backups/backups.html"><h6>Website Backups</h6></a>
+            <a href="game request page/request_main.html"><h6>Request a Game!</h6></a>
+        </div>
+    </div>
 </body>
 </html>
