--- a/game request page/request_main.html
+++ b/game request page/request_main.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!--google translate api-->
-    <script src="script.js"></script> 
-      <script type="text/javascript">
+    <!-- Google Translate API -->
+    <script src="script.js"></script>
+    <script type="text/javascript">
         function googleTranslateElementInit() {
             new google.translate.TranslateElement(
                 {pageLanguage: 'en'},
                 'google_translate_element'
             );
-        } 
-  </script>
-  <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-    <!--google translate api-->
+        }
+    </script>
+    <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+    <!-- Google Translate API -->
     <link rel="stylesheet" href="request.css">
-    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game Requests | Geared Games</title>
@@ -28,18 +28,18 @@
         <section class="compatible-games">
             <h2>Compatible Game Types</h2>
             <ul>
-                <li>GBA</li>
-                <li>SNES</li>
-                <li>GBC</li>
-                <li>GB</li>
-                <li>Flash</li>
-                <li>Simple HTML/CSS/JS</li>
+                <li><span class="icon">🎮</span> GBA</li>
+                <li><span class="icon">🎮</span> SNES</li>
+                <li><span class="icon">🎮</span> GBC</li>
+                <li><span class="icon">🎮</span> GB</li>
+                <li><span class="icon">🌐</span> Flash</li>
+                <li><span class="icon">💻</span> Simple HTML/CSS/JS</li>
             </ul>
         </section>
 
         <section class="request-links">
-            <a href="request_form.html"><h6>Request Form</h6></a>
-            <a href="request_credits.html"><h6>Game Request Credits</h6></a>
+            <a href="request_form.html">Request Form</a>
+            <a href="request_credits.html">Game Request Credits</a>
         </section>
     </main>
 </body>
