--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>🎄 Geared Games 🎄</title>
 </head>
 <body>
+    <embed name="festive" src="/music/festive.mp3" loop="false" hidden="true" autostart="true">
     <div class="content">
         <h1>Welcome to Geared Games! 🎅</h1>
         <h2>Requests Completed: 4</h2>
