--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>🎄 Geared Games 🎄</title>
 </head>
 <body>
-    <embed name="festive" src="music/festive.mp3" loop="true" hidden="false" autostart="true">
+    <audio src="music/festive.mp3" hidden="true"><embed name="festive" src="music/festive.mp3" loop="true" hidden="false" autostart="true"></audio>
     <div class="content">
         <h1>Welcome to Geared Games! 🎅</h1>
         <h2>Requests Completed: 4</h2>
